# VelociRAG

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_PHASE6.md  RELEASING.md  SECURITY.md  demo.py  pyproject.toml  release.sh  server.json  test_pipeline.py
.aur/: PKGBUILD
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: final-review.md  phase1-qa.md  phase1-spec-review.md  phase1-spec.md  phase2-spec-review.md  phase3-code-review.md  phase3-spec.md  phase4-spec.md
docs/internal/: abstracts-spec.md  phase1-code-review.md  phase2-code-review.md  phase2-spec.md  phase3-spec-review.md  phase4-spec-review.md
examples/: basic_search.py  unified_search.py
src/velocirag/: __init__.py  abstracts.py  analyzers.py  chunker.py  cli.py  daemon.py  embedder.py  frontmatter.py  graph.py  mcp_server.py  metadata.py  pipeline.py  reranker.py  rrf.py  searcher.py  semantic_chunker.py  store.py  tracker.py  unified.py  variants.py
test_data/: ai_research.md  project_alpha.md  team_notes.md
tests/: test_abstracts.py  test_analyzers.py  test_cch.py  test_chunker.py  test_chunker.py.backup  test_cli.py  test_embedder.py  test_frontmatter.py  test_graph.py  test_incremental.py  test_mcp.py  test_metadata.py  test_pipeline.py  test_real_data.py  test_reranker.py  test_rrf.py  test_rrf.py.backup  test_searcher.py  test_semantic_chunker.py  test_store.py  test_tracker.py  test_unified.py  test_variants.py  test_variants.py.backup
workspace/archive/: debug_boundaries.py  debug_hybrid.py  debug_hybrid2.py  test_hybrid_cli.py  verify_hybrid_complete.py
